# ragha

./: .gitignore  Makefile  cabal.project  flake.nix  ragha.cabal  requirements.txt
app/: dot.hs  mig.hs  ragha.hs
etc/db/: .gitignore  Makefile
etc/db/schema/: 001-journal.sql  001.account.sql  002.journal.sql  account.sql
etc/nginx/: Makefile
etc/nginx/conf/: nginx.conf
etc/ssl/: cert.pem  key.pem  server.csr
src/Api/: Account.hs  Api.hs  Journal.hs  Ping.hs
src/Api/Account/: Account.hs
src/Auth/: Auth.hs
src/Dat/: DukDukGo.hs  OpenFda.hs
src/Datum/: DkDkGo.hs  DkDkGoApi.hs  DkDkGoSrc.hs  DukDukGo.hs  OpenFda.hs  OpenFdaApi.hs  OpenFdaSrc.hs
src/Db/: Db.hs
src/Db/Entity/: Account.hs  Journal.hs
src/Db/Query/: Journal.hs
src/Entity/: Account.hs
src/Etc/: Context.hs  Dot.hs  Init.hs  Ragha.hs
src/Fact/: DkDkGo.hs  DkDkGoApi.hs  DkDkGoSrc.hs  OpenFda.hs  OpenFdaApi.hs  OpenFdaSrc.hs
