cabal-version: 3.16
name:          ragha
version:       0.1.0.0
synopsis:      autoprompt
author:        ml
maintainer:    metaml@gmail.com
build-type:    Simple

common warnings
    ghc-options: -Wall -O2 -threaded

library
  exposed-modules: Db.Db
                 , Db.Entity.Account
                 , Db.Entity.Journal
                 , Db.Query.Journal
                 , Etc.Context
                 , Etc.Dot
                 , Etc.Init
                 , Fact.DkDkGo
                 , Fact.DkDkGoApi
                 , Fact.DkDkGoSrc
                 , Fact.OpenFda
                 , Fact.OpenFdaApi
                 , Fact.OpenFdaSrc

  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -threaded -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively -fprof-auto -fprof-cafs -fasm
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveDataTypeable
                    , DerivingVia
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , ForeignFunctionInterface
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , ImpredicativeTypes
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , OverloadedLabels
                    , OverloadedStrings
                    , OverloadedRecordDot
                    , OverloadedRecordUpdate
                    , PartialTypeSignatures
                    , PatternSynonyms
                    , PolyKinds
                    , QuasiQuotes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , StrictData
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances
                    , ViewPatterns
  build-depends:      base
                    , aeson
                    , async
                    , beam-core
                    , beam-migrate
                    , beam-postgres
                    -- , bytestring
                    -- , exceptions
                    -- , filepath
                    , hashable
                    , haxl
                    , http-client
                    , http-client-tls
                    , http-media
                    , inline-python
                    -- , openai
                    -- , optics-core
                    -- , optparse-applicative
                    , postgresql-simple
                    -- , resourcet
                    , servant
                    -- , servant-auth
                    , servant-client
                    , servant-client-core
                    -- , servant-server
                    -- , streamly-core
                    -- , strings
                    , text
                    -- , text-conversions
                    , time
                    , uuid
                    -- , vector
                    -- , wai
                    -- , warp
                    -- , wai-cors
                    -- , warp-tls

executable dot
    import:             warnings
    main-is:            dot.hs
    ghc-options:        -O2 -Wall -threaded -rtsopts -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively -fprof-auto -fprof-cafs -fasm
    build-depends:      base
                      , ragha
                      , text
    hs-source-dirs:     app
    default-language:   Haskell2010

executable mig
    import:             warnings
    main-is:            mig.hs
    ghc-options:        -O2 -Wall -threaded -rtsopts -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively -fprof-auto -fprof-cafs -fasm
    default-extensions: OverloadedStrings
                      , OverloadedRecordDot
    build-depends:      base
                      , bytestring
                      , postgresql-migration
                      , postgresql-simple
                      , ragha
    hs-source-dirs:     app
    default-language:   Haskell2010
